--- a/README
+++ b/README
@@ -1,10 +1,4 @@
-This is a Javascript Debugging Library.
+This project has been move to [Debuggify Js]
 
-Features:
-Single Time init even on multiple inclusion
-Different type of messages -log,warning,error,exception,assert
-Attach a object inside closure to global space for accessing through console
-overriding logging functions capability
-multiple templates of messages to be used
-log stating and end of a function
-stack dump 
+
+  [Debuggify JS]: https://github.com/debuggify/debuggify_js
